# login/routes.py
@@ -1,18 +1,9 @@
 from flask import request, Blueprint, jsonify
-from flask_jwt_extended import (
-    JWTManager, create_access_token, jwt_required, get_jwt_identity
-)
+from werkzeug.security import generate_password_hash, check_password_hash
 from .verify_passkey import verify_by_username_password, verify_by_thid_mobile
-from datetime import timedelta
+from flask_jwt_extended import jwt_required, get_jwt_identity,get_jwt
 
 login_bp = Blueprint('login', __name__)
-
-# Configure JWT Secret Key
-from flask import Flask
-app = Flask(__name__)
-app.config["JWT_SECRET_KEY"] = current_app.config['']  # Replace with a strong secret key
-app.config["JWT_ACCESS_TOKEN_EXPIRES"] = timedelta(hours=1)
-jwt = JWTManager(app)  # Initialize JWT extension
 
 @login_bp.route('/verify/passkey/', methods=['GET'])
 def verify_passkey():
@@ -23,14 +14,29 @@ def verify_passkey():
         mobile = request.args.get("mobile")
 
         if username and password and not (thid or mobile):
-            return verify_by_username_password(username, password)
-        
-        elif thid and mobile and not (username or password):
-            return verify_by_thid_mobile(thid, mobile)
-        
-        else: return jsonify({"error": "invalid request format. provide either username/password or thid/mobile."}), 400
-        
-    except Exception as e:
-        return jsonify({"error": f"an error occurred: {str(e)}"}), 500
+            output = verify_by_username_password(username, password)
 
+        elif thid and mobile and not (username or password):
+            output = verify_by_thid_mobile(thid, mobile)
+        else:
+            return jsonify({
+                "error": "Invalid request format. Provide either username/password or thid/mobile."
+            }), 400
+
+    except Exception as e:
+        return jsonify({"error": f"An error occurred: {str(e)}"}), 500
+    return output
+
+@login_bp.route('/get_user/', methods=['GET'])
+@jwt_required()
+def hash_password():
+    
+    # Retrieve the entire user data from the JWT claims
+    claims = get_jwt()
+    
+    # The full user data is stored in the claims dictionary
+    user_data = claims 
+    
+    # Return response with current user data and hashed password
+    return jsonify(user_data), 200
 
